# ongaku-qt

./: .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh
src/: databasemanager.cpp  databasemanager.h  main.cpp  mainwindow.cpp  mainwindow.h  musiclibraryflat.cpp  musiclibraryflat.h  musiclibrarymodel.cpp  musiclibrarymodel.h  musicplayer.cpp  musicplayer.h  musicscanner.cpp  musicscanner.h
